--- a/CodePortfolio.html
+++ b/CodePortfolio.html
@@ -38,21 +38,21 @@
     <h5> p5.js 2024 </h5>
     <div class="FolderContainer">
         <div class="box">
-            <p> <a href = "p5js_Games/AutobioGame/gameindex.html" >
+            <p> <a href = "project1.html" >
                 <img src = "images/folder9.png"
                 width="220"/> </a>
                 <h7> Autobiographical Game: Extracurricular </h7>
             </p>
         </div>
         <div class="box">
-            <p> <a href = "p5js_Games/Love_song_data_VOL_1/indexlove.html" >
+            <p> <a href = "project2.html" >
                 <img src = "images/folder8.png"
                 width="220"/>
                 </p> </a>
                 <h7>Love Song Data: VOL 1</h7>
         </div>
         <div class="box">
-            <p> <a href = "p5js_Games/Love_song_data_VOL_2/loveindex.html"  >
+            <p> <a href = "project3.html"  >
                 <img src = "images/folder7.png"
                 width="220"/>
             </p> </a>
@@ -62,45 +62,45 @@
  <br> <br> <br>
     <div class="FolderContainer">
         <div class="box">
-            <p> <a href = "p5js_Games/Checkerboard/checkindex.html"  >
+            <p> <a href = "project4.html"  >
                 <img src = "images/folder6.png"
                 width="220"/>
             </p> </a>
             <h7>Illusion of Color</h7>
         </div>
         <div class="box">
-            <p> <a href = "p5js_Games/EXP_CLOCK/clockindex.html"  >
-                <img src = "images/folder5.png"
-                width="220"/>
-            </p> </a>
-            <h7>Internal and External Time</h7>
-        </div>
-        <div class="box">
-            <p> <a href = "p5js_Games/Experimental_Corpse/cindex.html" >
+            <p> <a href = "project6.html" >
                 <img src = "images/folder4.png"
                 width="220"/>
             </p> </a>
             <h7>Expirimental Corpse</h7>
         </div>
+        <div class="box">
+            <p> <a href = "project5.html"  >
+                <img src = "images/folder5.png"
+                width="220"/>
+            </p> </a>
+            <h7>Expirimental Clock</h7>
+        </div>
     </div>
 <br> <br> <br>
     <div class="FolderContainer">
         <div class="box">
-            <p> <a href = "p5js_Games/Face_Generator/fgindex.html" >
+            <p> <a href = "project7.html" >
                 <img src = "images/folder3.png"
                 width="200"/>
             </p> </a>
             <h7>Face Generator</h7>
         </div>
         <div class="box">
-            <p> <a href = "p5js_Games/CC_HW_2/indextwo.html" >
+            <p> <a href = "project8.html" >
                 <img src = "images/folder2.png"
                 width="220"/>
             </p> </a>
             <h7>Image Recreation</h7>
         </div>
         <div class="box">
-            <p> <a href = "p5js_Games/CC_HW_1/indexone.html" >
+            <p> <a href = "project9.html" >
                 <img src = "images/folder1.png"
                 width="220"/>
             </p> </a>
