--- a/about.html
+++ b/about.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ILPrimarii Code Portfolio: About and Portfolio</title>
+    <title>ILPrimarii About</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href = "style.css">
-    <link rel="icon" type = "image/png" href="images/covertest.png">
+    <link rel="icon" type = "image/png" href="images/logo2.png">
 
 </head>
     <header>
         <div class="PageChangeContainer">
         <div class="box">
-            <p> <h2> <a href = "HomePage.html" >
+            <p> <h2> <a href = "index.html" >
                 <img src = "images/logo.png"
                 width="90"/>
             </a> </h2> </p>
