--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
                 <h5> Thanks for checking out my work! </h5>
                 <p> <h2> CONTACT INFORMATION </h2> </p>
                 <p> <h5>If you're intrested in any of my designs, feel free to message me at ilprimarii@gmail.com or click the button below! </h5> </p>
-                <p> <div class="YellowButton2">
+                <p> <div class="RedButton2">
                     <a href = "https://linktr.ee/kolapep" ><h3>Contact Information</h3></a> </p>
                     </div>
             </div>
