--- a/Project6.html
+++ b/Project6.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ILPrimarii Code Portfolio: About and Portfolio</title>
+    <title>ILPrimarii</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href = "style.css">
-    <link rel="icon" type = "image/png" href="images/covertest.png">
+    <link rel="icon" type = "image/png" href="images/logo2.png">
 
 </head>
     <header>
@@ -23,7 +23,7 @@
             <div class="MainContent1">
                 <h2> Expirimental Corpse</h2>
                 <iframe src="https://editor.p5js.org/kolapep/full/vy0cgC56x" width="400" height="650"></iframe>
-                <h2> 10/4/2004 </h2>
+                <h2> 10/4/2024 </h2>
                 <h5> I played the game with a few of my friends and asked them to design simple monsters with backstories for me. I resketched their drawings onto a readable page and then constructed my final monster with the outline sheet given. 
 
                     I decided to go simple with the colors (black and white) and focused on using stokeweight to replicate lineweight of inking in tradtiional media. </h5>
