--- a/Project4.html
+++ b/Project4.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ILPrimarii Code Portfolio: About and Portfolio</title>
+    <title>ILPrimarii</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href = "style.css">
-    <link rel="icon" type = "image/png" href="images/covertest.png">
+    <link rel="icon" type = "image/png" href="images/logo2.png">
 
 </head>
     <header>
@@ -25,7 +25,7 @@
                 <h4>Optical Illustion</h4>  
                 <br>
                 <iframe src="https://editor.p5js.org/kolapep/full/BUA08aVE_"width="420" height="440"></iframe>               <br>
-                <h2> 10/11/0000 </h2>
+                <h2> 10/11/2024 </h2>
                 <h5> My Illusion is based on simple fundementals in color theory.
                     I was inspired by an old school screen layout and glitch effects.
                     By rapidly changing blue and a mix of red shades, this creates the illusion of a purple screen. 
