--- a/Project7.html
+++ b/Project7.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ILPrimarii Code Portfolio: About and Portfolio</title>
+    <title>ILPrimarii</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href = "style.css">
-    <link rel="icon" type = "image/png" href="images/covertest.png">
+    <link rel="icon" type = "image/png" href="images/logo2.png">
 
 </head>
     <header>
@@ -25,7 +25,7 @@
                 <br>
                 <iframe src="https://editor.p5js.org/kolapep/full/egN5nYSiw" width="420" height="440"></iframe>
                 <br>
-                <h2> 9/27/2004 </h2>
+                <h2> 9/27/2024 </h2>
                 <h5> I wanted the player to be able to choose how the customized their character (random or manual). 
                     This mainly included including both a random funtion and one that tracks your mouse or keys. 
                     <br><br>
